2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Add more sanity check for
	--install: ensure alternative path and links are absolute, ensure
	master alternative path exists, forbid / and spaces in alternative
	names.
	* scripts/t/900_update_alternatives.t: Add corresponding tests in
	the test suite.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Checks that --install does not
	reuse alternatives or links in a way that is not compatible with
	the current setup.
	* scripts/t/900_update_alternatives.t: Add corresponding tests in
	the test suite.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Add logging to
	/var/log/dpkg.log.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* man/update-alternatives.8: The vocabulary used was misleading
	and not really uniform. Try to standardize and make it match with
	the vocabulary used in the source code too.
	Includes minor fixes to make it match the behaviour of the current
	implementation.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/update-alternatives.pl: Rewrite it entirely in a more
	object-oriented way. The only behaviour changes concern --config:
	the output is nicer and sorted, it accets a path as well as the
	index of the choice.
	* scripts/t/900_update_alternatives.t: Test suite adjusted to the
	--config change.

2009-02-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-gencontrol.pl, scripts/dpkg-gensymbols.pl: Reset
	umask to 0022 to ensure that files created in the DEBIAN directory
	have sane permissions.

2009-02-13  Guillem Jover  <guillem@debian.org>

	* src/query.c: Remove bogus comment about '--yet-to-unpack'.

2009-02-11  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Makefile.am: Drop cleanup-info.pl script.
	* man/Makefile.am, man/po/po4a.cfg: Drop cleanup-info(8) manual page.
	* README.feature-removal-schedule: Update information accordingly.
