@@ -215,7 +215,10 @@ alternatives directory and the alternative path for a slave link.
 Zero or more
 .B \-\-slave
 options, each followed by three arguments,
-may be specified.
+may be specified. Note that the master alternative must exist or the call
+will fail. However if a slave alternative doesn't exist, the corresponding
+slave alternative link will simply not be installed (a warning will still
+be displayed).
 .IP
 If the alternative name specified exists already
 in the alternatives system's records,
