@@ -161,6 +161,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
       Closes: #342566
     - it forbids reusing alternative links managed by other alternatives
     - new sanity checks on --install parameters. Closes: #423176
+    - install slave link only if the corresponding slave file is available.
+      Closes: #143701
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
