@@ -1,5 +1,14 @@
 2009-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/update-alternatives.pl: Installation of a slave
+	alternative link is only done if the corresponding slave file is
+	available.
+	* man/update-alternatives.8: Document this behaviour.
+	* scripts/t/900_update_alternatives.t: Add corresponding tests in
+	the test suite.
+
+2009-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/update-alternatives.pl: Add more sanity check for
 	--install: ensure alternative path and links are absolute, ensure
 	master alternative path exists, forbid / and spaces in alternative
